# molecule-libvirt

./: .pre-commit-config.yaml  .travis.yml  README.md  README.rst  bindep.txt  pyproject.toml  pytest.ini  setup.cfg  setup.py  test_requirements.yml  tox.ini
.github/: CODEOWNERS
.github/workflows/: labels.yml  tox.yml
molecule_libvirt/: driver.py
molecule_libvirt/cookiecutter/scenario/driver/libvirt/{{cookiecutter.molecule_directory}}/{{cookiecutter.scenario_name}}/: INSTALL.rst  converge.yml
molecule_libvirt/playbooks/: create.yml  destroy.yml
molecule_libvirt/playbooks/files/: create-vm-volume.sh
molecule_libvirt/playbooks/playbooks/: create.yml  destroy.yml
molecule_libvirt/playbooks/templates/: meta-data.j2  user-data.j2
molecule_libvirt/playbooks/templates/network/: network.xml.j2
molecule_libvirt/playbooks/templates/vm/: vm.xml.j2
molecule_libvirt/test/: test_driver.py
molecule_libvirt/test/functional/: test_libvirt.py
molecule_libvirt/test/scenarios/driver/libvirt/molecule/default/: molecule.yml
molecule_libvirt/test/scenarios/driver/libvirt/molecule/multi-node/: molecule.yml
tools/: test-setup.sh
zuul.d/: layout.yaml
