[aliases]
dists = clean --all sdist bdist_wheel

[bdist_wheel]
universal = 1

[metadata]
name = molecule-libvirt
url = https://github.com/ansible-community/molecule-libvirt
project_urls =
    Bug Tracker = https://github.com/ansible-community/molecule-libvirt/issues
    Release Management = https://github.com/ansible-community/molecule-libvirt/projects
    CI: Zuul = https://dashboard.zuul.ansible.com/t/ansible/builds?project=ansible-community/molecule-libvirt
    Mailing lists = https://docs.ansible.com/ansible/latest/community/communication.html#mailing-list-information
    Source Code = https://github.com/ansible-community/molecule-libvirt
description = libvirt Molecule Plugin :: run molecule tests on libvirt
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Ansible by Red Hat
author_email = info@ansible.com
maintainer = Ansible by Red Hat
maintainer_email = info@ansible.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Framework :: Pytest
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

    Topic :: System :: Systems Administration
    Topic :: Utilities

keywords =
    ansible
    roles
    testing
    molecule
    plugin
    libvirt

[options]
use_scm_version = True
python_requires = >=3.5
packages = find:
include_package_data = True
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0

# These are required in actual runtime:
install_requires =
    # https://github.com/ansible/ansible/blob/devel/packaging/requirements/requirements-libvirt.txt
    ansible
    libvirt-python>=5.9.0
    molecule >= 3.0a4
    pyyaml >= 5.1, < 6

[options.extras_require]
test =
    flake8>=3.6.0, < 4

    mock>=3.0.5, < 4
    pytest-cov>=2.7.1, < 3
    pytest-dependency
    pytest-helpers-namespace>=2019.1.8, < 2020
    pytest-mock>=1.10.4, < 2
    pytest-sugar
    pytest-verbose-parametrize>=1.7.0, < 2
    pytest-xdist>=1.29.0, < 2
    pytest>=4.6.3, < 5

[options.entry_points]
molecule.driver =
    libvirt = molecule_libvirt.driver:LibVirt

[options.packages.find]
where = .
