[aliases]
dists = clean --all sdist bdist_wheel

[metadata]
name = molecule-libvirt
url = https://github.com/ansible-community/molecule-libvirt
project_urls =
    Bug Tracker = https://github.com/ansible-community/molecule-libvirt/issues
    Release Management = https://github.com/ansible-community/molecule-libvirt/projects
    CI: Zuul = https://dashboard.zuul.ansible.com/t/ansible/builds?project=ansible-community/molecule-libvirt
    Discussions = https://github.com/ansible-community/molecule/discussions
    Source Code = https://github.com/ansible-community/molecule-libvirt
description = libvirt Molecule Plugin :: run molecule tests on libvirt
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Ansible by Red Hat
author_email = info@ansible.com
maintainer = Ansible by Red Hat
maintainer_email = info@ansible.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console

    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators

    License :: OSI Approved :: MIT License

    Natural Language :: English

    Operating System :: OS Independent

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

    Topic :: System :: Systems Administration
    Topic :: Utilities

keywords =
    ansible
    roles
    testing
    molecule
    plugin
    libvirt

[options]
use_scm_version = True
python_requires = >=3.6
packages = find:
include_package_data = True
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0

# These are required in actual runtime:
install_requires =
    molecule >= 3.2.0a0
    pyyaml >= 5.1, < 6
    libvirt-python
    lxml
    jmespath

[options.extras_require]
test =
    molecule[test]
    pytest-helpers-namespace

[options.entry_points]
molecule.driver =
    libvirt = molecule_libvirt.driver:LibVirt

[options.packages.find]
where = .
